[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-docs-generator-ai-mcp"
version = "0.1.0"
description = "Generate API documentation from code."
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/api-docs-generator-ai-mcp"
